Fri Apr 15 14:14:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* test/ruby/test_array.rb (test_sum): add assertions for Rational and
	  Complex numbers.

Fri Apr 15 10:07:11 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (console_key_pressed_p): raise the same
	  exception, "unknown virtual key code", for names with nul chars.
	  though console_win32_vk() considers the length and can deal with
	  nul chars, rb_sprintf() raised at PRIsVALUE previously, so quote
	  it if it is unprintable.

Fri Apr 15 09:02:58 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (rb_sym2str): fallback definition for
	  older ruby.  [ruby-core:74953] [Bug #12284]

Thu Apr 14 21:46:36 2016  Tanaka Akira  <akr@fsij.org>

	* array.c (rb_ary_sum): Support the optional argument, init, and
	  block.

Thu Apr 14 19:02:41 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/irb/ext/save-history.rb: suppress warning: method redefined;
	  discarding old save_history=.

Thu Apr 14 14:58:14 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tkutil/tkutil.c (tk_hash_kv): the third argument can be
	  nil not only an Array.  reported by @windwiny at
	  https://github.com/ruby/ruby/commit/cdaa94e#commitcomment-17096618

Thu Apr 14 14:28:55 2016  cremno phobia  <cremno@mail.ru>

	* cont.c (fiber_initialize_machine_stack_context): fix wrong
	  _MSC_VER check, should be decimal but not hexadecimal.
	  [ruby-core:74936] [Bug #12279]

Wed Apr 13 22:51:38 2016  Tanaka Akira  <akr@fsij.org>

	* array.c (rb_ary_sum): Array#sum is implemented.
	  Kahan's compensated summation algorithm for precise sum of float
	  numbers is moved from ary_inject_op in enum.c.

	* enum.c (ary_inject_op): Don't specialize for float numbers.

	  [ruby-core:74569] [Feature #12217] proposed by mrkn.

Wed Apr 13 15:56:35 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_ceil): add an optional parameter, digits, as
	  well as Float#round.  [Feature #12245]
